--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.WebSocketClient"
         tools:targetApi="31">
         <!-- Declares the input method service. -->
-        <service android:name=".websocketclient.GamepadInputMethodService"
+        <service android:name=".websocketclient.service.GamepadInputMethodService"
             android:label="Gamepad"
             android:permission="android.permission.BIND_INPUT_METHOD"
             android:exported="true">
@@ -26,7 +26,7 @@
             </intent-filter>
         </service>
         <service
-            android:name=".websocketclient.FloatingWidgetShowService"
+            android:name=".websocketclient.service.FloatingViewService"
             android:enabled="true"
             android:exported="false" />
         <activity
